# ircbot.c

./: .clang-format  .clang_complete  .gitignore  CMakeLists.txt  Changelog.md  Doxyfile  LICENSE  Makefile  README.md  mainpage.dox
chatter/: CMakeLists.txt  chatter.c  chatter.dox  chatter.h  commands.c  commands.h  debug.c  debug.h  debug_test.c  ircmessage.c  ircmessage.h  main.c  window.c  window.h
debug/: CMakeLists.txt  debug.c  debug.dox  debug.h  ircdebug.dox
doc/: annotated.html  bot_8h.html  bot_8h_source.html  classes.html  connection_8h.html  connection_8h_source.html  dir_29d667bb07f05bb7400afdc76794b290.html  dir_29d667bb07f05bb7400afdc76794b290.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_7809a5fd4a748505dcdbefeb977685f2.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  md__changelog.html  minunit_8h.html  minunit_8h.js  minunit_8h_source.html  navtreedata.js  pages.html  struct_bot___command.html  struct_i_r_c___bot.html  struct_i_r_c___connection.html  struct_i_r_c___connection.js
doc/html/: annotated.html  bot_8h.html  bot_8h_source.html  classes.html  connection_8h.html  connection_8h_source.html  dir_29d667bb07f05bb7400afdc76794b290.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7809a5fd4a748505dcdbefeb977685f2.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  globals_vars.html  index.html  main_8c.html  md__changelog.html  md__r_e_a_d_m_e.html  menudata.js  minunit_8h.html  minunit_8h_source.html  pages.html  struct_bot___command.html  struct_i_r_c___bot.html  struct_i_r_c___connection.html
doc/search/: all_1.js  all_2.js  all_4.js  all_5.js  classes_1.js  defines_0.js  searchdata.js  typedefs_0.js  typedefs_2.js  variables_1.js  variables_7.js
docs/: annotated.html  annotated_dup.js  bot_8c.html  bot_8c.js  bot_8h.html  bot_8h.js  bot_8h_source.html  chatter.html  chatter_8c.html  chatter_8c.js  chatter_8h.html  chatter_8h.js  chatter_8h_source.html  classes.html  commands_8c.html  commands_8c.js  commands_8h.html  commands_8h.js  commands_8h_source.html  connection_8c.html  connection_8c.js  connection_8h.html  connection_8h.js  connection_8h_source.html  debug_8c.html  debug_8c.js  debug_8h.html  debug_8h.js  debug_8h_source.html  dir_1a8f15acf03b546c475078ab3acd9265.html  dir_1a8f15acf03b546c475078ab3acd9265.js  dir_29d667bb07f05bb7400afdc76794b290.html  dir_29d667bb07f05bb7400afdc76794b290.js  dir_36efd7dae9f4e507715bf9d7691e4901.html  dir_36efd7dae9f4e507715bf9d7691e4901.js  dir_40a3323566beb10cc48d9831db65075f.html  dir_40a3323566beb10cc48d9831db65075f.js  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_7809a5fd4a748505dcdbefeb977685f2.html  (+49 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_2.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js  variables_6.js  variables_7.js  variables_8.js
html/: index.html  md_Changelog.html  md_README.html  pages.html  todoPage.html
html/search/: all_1.js  all_2.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
latex/: index.tex  md_Changelog.tex  md_README.tex  refman.tex  todoPage.tex
libbot/: CMakeLists.txt  mainpage.dox
libbot/bot/: bot.c  bot.h  commands.c  commands.h
libbot/connection/: connection.c  connection.h
src/: CMakeLists.txt  client.c  client.h  main.c
src/bot/: bot.c  bot.h  commands.c  commands.h
src/client/: client.c  client.h
src/connection/: connection.c  connection.h
src/server/: irc_server.c  irc_server.h
tests/: CMakeLists.txt  minunit.h  test_bot.c  test_bot_commands.c  test_connection.c  test_connection_keepalive.c  test_debug.c  test_main.c
tests/server/: CMakeLists.txt  server_main.c  test_server.c  test_server.h
(+9 files in other folders)
